maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:82: error: not found: value setPosition
    setPosition(posX, posY-1)
    ^JediEscaper:85: error: not found: value setPosition
    setPosition(posXActu, posYActu)
    ^JediEscaper:87: error: not found: value setPosition
    setPosition(posX-1, posY)
    ^JediEscaper:90: error: not found: value setPosition
    setPosition(posXActu, posYActu)
    ^JediEscaper:92: error: not found: value setPosition
    setPosition(posX, posY+1)
    ^JediEscaper:95: error: not found: value setPosition
    setPosition(posXActu, posYActu)
    ^JediEscaper:98: error: not found: value setPosition
    setPosition(posX+1, posY)
    ^JediEscaper:101: error: not found: value setPosition
    setPosition(posXActu, posYActu)
    ^